# webjd-mvp

./: .gitignore  Makefile  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/legal_chatbot_test/: agent.py  app.py  chat.txt  chat_history.py  chatbot.py  chroma_manager.py  file_utils.py  ingest.py
src/legal_chatbot_test/chroma_db/: chroma.sqlite3
src/legal_chatbot_test/data/: data.txt
tests/: evaluator.py  test_chatbot.py
tests/eval_questions/: sample_questions.json
