[project]
name = "legal-chatbot-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Taylor Tran",email = "taylor@thepointergroup.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.97.1,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langgraph (>=0.5.4,<0.6.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "legal_chatbot_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
